astrein: Integrate with the CI
Change-Id: I27e9ff99ebc873371c112eae6c737288fd799941

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -437,16 +437,14 @@ STAGES:
       RESULT_CHECK_TYPE: "PYLINT"
       RESULT_CHECK_FILE_PATTERN: "results/ruff.txt"
 
-    - NAME: "Python pylint"
-      ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE,CHANGED_RUN_UVENV_SCRIPT
+    - NAME: "Python astrein"
+      ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE
       DIR: "tests"
-      ENV_VARS:
-          PYLINT_ARGS: "--output-format=parseable"
-      COMMAND: "make test-pylint &> ${RESULTS}/pylint.txt"
+      COMMAND: "make test-astrein &> ${RESULTS}/astrein.txt"
       BAZEL_LOCKS_AMOUNT: 1
       TEXT_ON_SKIP: "Neither pyproject.toml nor Python files changed"
-      RESULT_CHECK_TYPE: "PYLINT"
-      RESULT_CHECK_FILE_PATTERN: "results/pylint.txt"
+      RESULT_CHECK_TYPE: "GCC"
+      RESULT_CHECK_FILE_PATTERN: "results/astrein.txt"
 
     - NAME: "Python Bandit"
       ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_FIND_PYTHON_FILES_SCRIPT,CHANGED_PYTHON_FILES,CHANGED_PYTHON_REQUIREMENTS,CHANGED_PYPROJECT_TOML_FILE,CHANGED_TESTS_MAKEFILE,CHANGED_RUN_UVENV_SCRIPT
