--- a/omd/packages/nagios/BUILD.nagios.bazel
+++ b/omd/packages/nagios/BUILD.nagios.bazel
@@ -35,6 +35,7 @@ configure_make(
         "ORIGIN_VAR": "\\\\$$\\$$ORIGIN",
     },
     lib_source = ":all_srcs",
+    linkopts = ["-Wl,--strip-all"],
     out_binaries = [
         "nagios",
         "nagiostats",
