--- a/omd/packages/erlang/BUILD.erlang.bazel
+++ b/omd/packages/erlang/BUILD.erlang.bazel
@@ -57,6 +57,7 @@ configure_make(
     },
     install_prefix = "$INSTALLDIR",
     lib_source = ":all_srcs",
+    linkopts = ["-Wl,--strip-all"],
     out_bin_dir = "%s/bin/" % PLACE_HOLDER,
     out_binaries = [
         "ct_run",
