--- a/omd/packages/xinetd/BUILD.xinetd.bazel
+++ b/omd/packages/xinetd/BUILD.xinetd.bazel
@@ -29,6 +29,7 @@ configure_make(
     },
     install_prefix = "xinetd_dir",
     lib_source = ":all_srcs",
+    linkopts = ["-Wl,--strip-all"],
     out_binaries = [
         "xinetd",
     ],
