Set timestamp of all files to current time when building
Per default bazel sets the timestamp to 1st. of January 2000,
but we want the timestamp to reflect the date of the build.

CMK-27879

Change-Id: If148ec260ded6c96b6b4ad111b58a4dd063319d2

--- a/active_checks/BUILD
+++ b/active_checks/BUILD
@@ -31,5 +31,6 @@ pkg_files(
 pkg_tar(
     name = "pkg_tar",
     srcs = [":active_checks_bin"],
+    stamp = 1,
     visibility = ["//visibility:public"],
 )
