--- a/omd/packages/mod_fcgid/BUILD
+++ b/omd/packages/mod_fcgid/BUILD
@@ -25,6 +25,7 @@ pkg_tar(
         ":lib_pkg",
         ":skel_pkg",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
