--- a/omd/packages/msitools/BUILD.bazel
+++ b/omd/packages/msitools/BUILD.bazel
@@ -65,6 +65,7 @@ pkg_tar(
         ":bin",
         ":without_bin",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//visibility:public"],
 )
