--- a/omd/packages/redis/BUILD
+++ b/omd/packages/redis/BUILD
@@ -85,6 +85,7 @@ pkg_tar(
         ":skel_755",
         ":skel_var",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
