--- a/omd/packages/stunnel/BUILD
+++ b/omd/packages/stunnel/BUILD
@@ -91,6 +91,7 @@ pkg_tar(
         ":lib_pkg",
         ":skel",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
