--- a/omd/packages/xinetd/BUILD
+++ b/omd/packages/xinetd/BUILD
@@ -39,6 +39,7 @@ pkg_tar(
         ":share",
         ":xinetd_bin",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
