--- a/omd/packages/check-cert/BUILD
+++ b/omd/packages/check-cert/BUILD
@@ -21,6 +21,7 @@ pkg_files(
 pkg_tar(
     name = "check-cert",
     srcs = [":check-cert_pkg"],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//visibility:public"],
 )
