--- a/omd/packages/jaeger/BUILD
+++ b/omd/packages/jaeger/BUILD
@@ -123,6 +123,7 @@ pkg_tar(
         ":skel",
         ":skel_755",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
