--- a/omd/packages/pnp4nagios/BUILD
+++ b/omd/packages/pnp4nagios/BUILD
@@ -158,6 +158,7 @@ pkg_tar(
         ":man_pkg",
         ":skel_pkg",
     ],
+    stamp = 1,
     tags = ["manual"],
     visibility = ["//omd:__pkg__"],
 )
