astrein: Add layer checker
Examples:

bazel run //tests/astrein:astrein -- --checker module-layers --repo-root . cmk/gui/main.py
bazel run //tests/astrein:astrein -- --checker module-layers --repo-root . cmk/gui
bazel run //tests/astrein:astrein -- --checker all --repo-root . cmk

Change-Id: Iea32f78b16e6bb7771722848b89a69ac0e478c39

--- a/tests/astrein/BUILD
+++ b/tests/astrein/BUILD
@@ -6,10 +6,25 @@ py_library(
 )
 
 py_library(
+    name = "module_layers_config",
+    srcs = ["config/module_layers_config.py"],
+)
+
+py_library(
     name = "checker_localization",
     srcs = ["checker_localization.py"],
     visibility = ["//tests/astrein:__subpackages__"],
     deps = [":framework"],
+)
+
+py_library(
+    name = "checker_module_layers",
+    srcs = ["checker_module_layers.py"],
+    visibility = ["//tests/astrein:__subpackages__"],
+    deps = [
+        ":framework",
+        ":module_layers_config",
+    ],
 )
 
 py_binary(
@@ -19,6 +34,8 @@ py_binary(
     visibility = ["//visibility:public"],
     deps = [
         ":checker_localization",
+        ":checker_module_layers",
         ":framework",
+        ":module_layers_config",
     ],
 )
