Adapt uv cache key for gh actions
... to reality: we introduced the community-requirements.txt already quite some time ago

Change-Id: Idac0676b52661003e64ff99c40a1c4d125d7b3cf

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -69,7 +69,7 @@ jobs:
             - name: Cache uv
               uses: actions/cache@v3
               with:
-                  key: uv-${{ matrix.os }}-${{ hashFiles('requirements_all_lock.txt') }}
+                  key: uv-${{ matrix.os }}-${{ hashFiles('community-requirements.txt') }}
                   path: ${{ env.UV_CACHE_DIR  }}
             - name: Cache bazelisk
               uses: actions/cache@v3
