Fix perl modules permissions
Change-Id: If7839c0100c3e905cecf461fd6ad0eb4d256f65f

--- a/omd/packages/perl-modules/BUILD
+++ b/omd/packages/perl-modules/BUILD
@@ -89,6 +89,8 @@ genrule(
         mkdir -p perl-modules/lib/perl5/CPAN
         cp $(execpath //omd/packages/perl-modules:MyConfig.pm) perl-modules/lib/perl5/CPAN/MyConfig.skel
 
+        chmod +w -R perl-modules
+
         tar cf $@ -C perl-modules .
     """,
     tags = ["manual"],
