Fix python modules permissions
Change-Id: I76ff705f2118f2d5b6bf44b73caa9dddf91b2927

--- a/omd/packages/python3-modules/BUILD
+++ b/omd/packages/python3-modules/BUILD
@@ -100,6 +100,9 @@ genrule(
             $$(echo $$F | sed 's|[^/]*/|../|g' | sed 's|\\.\\./|\\$$ORIGIN/|' | sed 's|[^/]*$$||') $$F ;
         done
         cd -
+
+        chmod +w python3-modules
+
 	tar cf $@ -C python3-modules .
     """.format(pyMajMin = PYTHON_MAJOR_DOT_MINOR),
     tags = ["manual"],
