OTel: add change validation for otel-collector
Change-Id: I9087b63a880f4025506aee2bc9691ccfe4e45e1a

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -168,6 +168,12 @@ VARIABLES:
     - NAME: CHANGED_CMK_OTEL_FILES
       SH: "echo '${CHANGED_FILES_REL}' | grep '^non-free/packages/cmk-otel-collector/' || true"
 
+    - NAME: CHANGED_OTEL_FILES
+      SH: "echo '${CHANGED_FILES_REL}' | grep '^non-free/packages/otel-collector/' || true"
+
+    - NAME: CHANGED_GO_MOD
+      SH: "echo '${CHANGED_FILES_REL}' | grep '^go.mod' || true"
+
     - NAME: CHANGED_RULESETS_FILES
       SH: "echo '${CHANGED_FILES_REL}' | grep '^packages/cmk-rulesets/' || true"
 
@@ -608,6 +614,14 @@ STAGES:
       BAZEL_LOCKS_AMOUNT: 1
       TEXT_ON_SKIP: "No cmk-otel-collector files changed"
       RESULT_CHECK_FILE_PATTERN: "results/cmk-otel-collector.txt"
+
+    - NAME: "Package otel-collector"
+      ONLY_WHEN_NOT_EMPTY: CHANGED_OTEL_FILES, CHANGED_GO_MOD
+      DIR: "non-free/packages/otel-collector"
+      COMMAND: "./run --all &> ${RESULTS}/otel-collector.txt"
+      BAZEL_LOCKS_AMOUNT: 1
+      TEXT_ON_SKIP: "No otel-collector files changed"
+      RESULT_CHECK_FILE_PATTERN: "results/otel-collector.txt"
 
     - NAME: "Package cmk-rulesets"
       ONLY_WHEN_NOT_EMPTY: CHANGED_REFERENCE_IMAGE,CHANGED_PYPROJECT_TOML_FILE,CHANGED_RULESETS_FILES,CHANGED_SEMGREP_RULE_FILES,CHANGED_REQUIREMENTS_LOCK
