remove .gitignore from installation
Change-Id: I268f8b639a3657728a751c71edbf7238c9e8af93

--- a/agents/windows/plugins/BUILD
+++ b/agents/windows/plugins/BUILD
@@ -12,6 +12,7 @@ filegroup(
             "reference/**",
             "scripts/**",
             ".gitattributes",
+            ".gitignore",
             "**/OWNERS",
             ".f12",
         ],
