Do not build libpython.a
CMK-28582

Change-Id: If700d81e91424921b02ca7a064f665139845c1a7

--- a/omd/packages/Python/BUILD.Python.bazel
+++ b/omd/packages/Python/BUILD.Python.bazel
@@ -43,6 +43,7 @@ configure_make(
         "--enable-optimizations",
         "--enable-shared",
         "--with-lto",
+        "--without-static-libpython",
         "DESTDIR=%s" % INSTALL_PREFIX,
     ],
     data = [
