feat: wrap agent receiver create task endpoint with cn authorization and request from localhost dependencies
Change-Id: I2448e15ea7d42decfdfbea98b4a76241006f5cef

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -48,7 +48,9 @@ py_library(
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/get_version.py",
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/update_task.py",
         "cmk/agent_receiver/relay/api/routers/tasks/libs/config_task_factory.py",
+        "cmk/agent_receiver/relay/api/routers/tasks/libs/localhost_authorization.py",
         "cmk/agent_receiver/relay/api/routers/tasks/libs/retrieve_config_serial.py",
+        "cmk/agent_receiver/relay/api/routers/tasks/libs/site_cn_authorization.py",
         "cmk/agent_receiver/relay/api/routers/tasks/libs/tasks_repository.py",
         "cmk/agent_receiver/relay/api/routers/tasks/serializers.py",
         "cmk/agent_receiver/relay/app.py",
